[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-sanitizer"
version = "0.0.2"
description = "A utility for identifying, anonymizing, and restoring PII in text using Presidio and AWS Bedrock."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "royLiuuu", email = "royliu810@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy"
]

[project.urls]
"Homepage" = "https://github.com/royLiuuu/pii-sanitizer"

